:construction: align-items - baseline

--- a/5-align-items.html
+++ b/5-align-items.html
@@ -35,35 +35,52 @@
       .end {
         align-items: flex-end;
       }
+
+      .baseline {
+        align-items: baseline;
+      }
     </style>
   </head>
   <body>
-    <h2>center</h2>
+    <h1>align-items</h1>
+    <h2>ROW</h2>
+    <h3>center</h3>
     <section class="container center">
       <div class="item">Item 1</div>
       <div class="item">Lorem ipsum dolor sit amet</div>
       <div class="item">Item 3 mais algum texto...</div>
     </section>
 
-    <h2>stretch</h2>
+    <h3>stretch</h3>
     <section class="container stretch">
       <div class="item">Item 1</div>
       <div class="item">Lorem ipsum dolor sit amet</div>
       <div class="item">Item 3 mais algum texto, texto, texto, texto...</div>
     </section>
 
-    <h2>flex-start</h2>
+    <h3>flex-start</h3>
     <section class="container start">
       <div class="item">Item 1</div>
       <div class="item">Lorem ipsum dolor sit amet</div>
       <div class="item">Item 3 mais algum texto, texto, texto, texto...</div>
     </section>
 
-    <h2>flex-end</h2>
+    <h3>flex-end</h3>
     <section class="container end">
       <div class="item">Item 1</div>
       <div class="item">Lorem ipsum dolor sit amet</div>
       <div class="item">Item 3 mais algum texto, texto, texto, texto...</div>
     </section>
+
+    <h3>baseline</h3>
+    <section class="container baseline">
+      <div class="item"><br />Item 1</div>
+      <div class="item">Lorem ipsum dolor sit amet</div>
+      <div class="item">Item 3 mais algum texto, texto, texto, texto...</div>
+    </section>
+
+    <hr />
+
+    <h2>column</h2>
   </body>
 </html>
