--- a/5-align-items.html
+++ b/5-align-items.html
@@ -56,6 +56,11 @@
     </style>
   </head>
   <body>
+    <header>
+      <a href="index.html">Retornar para Início</a>
+    </header>
+    <hr>
+    
     <h1>align-items</h1>
     <h2>ROW</h2>
     <h3>center</h3>
