--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Início</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <section>
-            <h1>Hello World</h1>
-            <p>Navegue entre as páginas desenvolvidas durante as aulas do curso <a href="https://web.dio.me/play?search=Posicionando%20elementos%20com%20Flexbox%20em%20CSS&tab=cursos" target="_blank" rel="noopener noreferrer">Posicionando elementos com Flexbox em CSS</a>.</p>
-        </section>
+      <section>
+        <h1>Hello World</h1>
+        <p>
+          Navegue entre as páginas desenvolvidas durante as aulas do curso
+          <a
+            href="https://web.dio.me/play?search=Posicionando%20elementos%20com%20Flexbox%20em%20CSS&tab=cursos"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Posicionando elementos com Flexbox em CSS</a
+          >.
+        </p>
+      </section>
     </header>
     <article>
-        <section>
-            <ul>
-                <li><a href="0-display-flex.html">0-display-flex</a></li>
-            </ul>
-            <ul>
-                <li><a href="1-flex-direction.html">1-flex-direction</a></li>
-            </ul>
-            <ul>
-                <li><a href="2-flex-wrap.html">2-flex-wrap</a></li>
-            </ul>
-            <ul>
-                <li><a href="3-flex-flow.html">flex-flow</a></li>
-            </ul>
-            <ul>
-                <li><a href="4-justify-content.html">4-justify-content</a></li>
-            </ul>
-            <ul>
-                <li><a href="5-align-items.html">5-align-items</a></li>
-            </ul>
-        </section>
+      <section>
+        <ul>
+          <h3>Fundamentos do Flexbox - Parte 1</h3>
+          <li><a href="0-display-flex.html">Display Flex</a></li>
+          <li><a href="1-flex-direction.html">Flex Direction</a></li>
+          <li><a href="2-flex-wrap.html">Flex Wrap</a></li>
+          <li><a href="3-flex-flow.html">Flex Flow</a></li>
+          <li><a href="4-justify-content.html">Justify Content</a></li>
+          <li><a href="5-align-items.html">Align Items</a></li>
+        </ul>
+      </section>
     </article>
-</body>
+  </body>
 </html>
