:construction: organizing folders and fixing header links

--- a/conteudos/0-display-flex.html
+++ b/conteudos/0-display-flex.html
@@ -21,10 +21,12 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Retornar para Início</a>
+      <a href="../index.html"> Início</a> |
+      <a href="../index.html"> &lsaquo; Anterior</a> |
+      <a href="1-flex-direction.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
-    
+
     <div class="flex">
       <div class="item">Item 1</div>
       <div class="item">Item 2</div>
