--- a/conteudos/3-flex-flow.html
+++ b/conteudos/3-flex-flow.html
@@ -50,9 +50,11 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Retornar para Início</a>
+      <a href="../index.html"> Início</a> |
+      <a href="2-flex-wrap.html"> &lsaquo; Anterior</a> |
+      <a href="4-justify-content.html"> Próxima &rsaquo;</a>
     </header>
-    <hr>
+    <hr />
     
     <h2>.default: row nowrap</h2>
     <div class="flex-container default">
