--- a/conteudos/2-flex-wrap.html
+++ b/conteudos/2-flex-wrap.html
@@ -49,9 +49,11 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Retornar para Início</a>
+      <a href="../index.html"> Início</a> |
+      <a href="1-flex-direction.html"> &lsaquo; Anterior</a> |
+      <a href="3-flex-flow.html"> Próxima &rsaquo;</a>
     </header>
-    <hr>
+    <hr />
     
     <h2>now wrap</h2>
     <div class="flex-container">
