--- a/conteudos/4-justify-content.html
+++ b/conteudos/4-justify-content.html
@@ -49,9 +49,11 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Retornar para Início</a>
+      <a href="../index.html"> Início</a> |
+      <a href="3-flex-flow.html"> &lsaquo; Anterior</a> |
+      <a href="5-align-items.html"> Próxima &rsaquo;</a>
     </header>
-    <hr>
+    <hr />
     
     <h1>Row</h1>
     <h2>Default: flex-start</h2>
