--- a/conteudos/5-align-items.html
+++ b/conteudos/5-align-items.html
@@ -57,9 +57,11 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Retornar para Início</a>
+      <a href="../index.html"> Início</a> |
+      <a href="4-justify-content.html"> &lsaquo; Anterior</a> |
+      <a href="5-align-items.html"> Próxima &rsaquo;</a>
     </header>
-    <hr>
+    <hr />
     
     <h1>align-items</h1>
     <h2>ROW</h2>
