--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <section>
         <ul>
           <h3>Fundamentos do Flexbox - Parte 1</h3>
-          <li><a href="0-display-flex.html">Display Flex</a></li>
-          <li><a href="1-flex-direction.html">Flex Direction</a></li>
-          <li><a href="2-flex-wrap.html">Flex Wrap</a></li>
-          <li><a href="3-flex-flow.html">Flex Flow</a></li>
-          <li><a href="4-justify-content.html">Justify Content</a></li>
-          <li><a href="5-align-items.html">Align Items</a></li>
+          <li><a href="conteudos/0-display-flex.html">Display Flex</a></li>
+          <li><a href="conteudos/1-flex-direction.html">Flex Direction</a></li>
+          <li><a href="conteudos/2-flex-wrap.html">Flex Wrap</a></li>
+          <li><a href="conteudos/3-flex-flow.html">Flex Flow</a></li>
+          <li><a href="conteudos/4-justify-content.html">Justify Content</a></li>
+          <li><a href="conteudos/5-align-items.html">Align Items</a></li>
         </ul>
       </section>
     </article>
