:construction: correcting titles

--- a/conteudos/0-display-flex.html
+++ b/conteudos/0-display-flex.html
@@ -26,7 +26,8 @@
       <a href="1-flex-direction.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
-
+    
+    <h1>Display Flex</h1>
     <div class="flex">
       <div class="item">Item 1</div>
       <div class="item">Item 2</div>
