--- a/conteudos/1-flex-direction.html
+++ b/conteudos/1-flex-direction.html
@@ -66,37 +66,50 @@
       <a href="2-flex-wrap.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
+
+    <h1>Flex Direction</h1>
+    <section>
+      <h2 class="flex-container">Default</h2>
+      <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="flex-container row-reverse">row-reverse</h2>
+      <ul class="flex-container row-reverse">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="flex-container">column</h2>
+      <ul class="flex-container column">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+      </ul>
+    </section>
     
-    <ul class="flex-container">
-      <li class="flex-item">1</li>
-      <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
-      <li class="flex-item">4</li>
-      <li class="flex-item">5</li>
-    </ul>
-
-    <ul class="flex-container row-reverse">
-      <li class="flex-item">1</li>
-      <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
-      <li class="flex-item">4</li>
-      <li class="flex-item">5</li>
-    </ul>
-
-    <ul class="flex-container column">
-      <li class="flex-item">1</li>
-      <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
-      <li class="flex-item">4</li>
-      <li class="flex-item">5</li>
-    </ul>
-
-    <ul class="flex-container column-reverse">
-      <li class="flex-item">1</li>
-      <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
-      <li class="flex-item">4</li>
-      <li class="flex-item">5</li>
-    </ul>
+    <section>
+      <ul class="flex-container column-reverse">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+      </ul>
+      <h2 class="flex-container column-reverse">column-reverse</h2>
+    </section>
   </body>
 </html>
