--- a/conteudos/5-align-items.html
+++ b/conteudos/5-align-items.html
@@ -63,8 +63,8 @@
     </header>
     <hr />
     
-    <h1>align-items</h1>
-    <h2>ROW</h2>
+    <h1>Align Items</h1>
+    <h2>Row</h2>
     <h3>center</h3>
     <section class="container center">
       <div class="item">Item 1</div>
@@ -102,7 +102,7 @@
 
     <hr />
 
-    <h2>COLUMN</h2>
+    <h2>Column</h2>
     <h3>flex-start</h3>
     <section class="container start column">
       <div class="item">Item 1</div>
