--- a/conteudos/2-flex-wrap.html
+++ b/conteudos/2-flex-wrap.html
@@ -55,6 +55,7 @@
     </header>
     <hr />
     
+    <h1>Flex Wrap</h1>
     <h2>now wrap</h2>
     <div class="flex-container">
       <div class="item blue">1</div>
