--- a/conteudos/4-justify-content.html
+++ b/conteudos/4-justify-content.html
@@ -54,23 +54,23 @@
       <a href="5-align-items.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
-    
-    <h1>Row</h1>
-    <h2>Default: flex-start</h2>
+    <h1>Justify Content</h1>    
+    <h2>Row</h2>
+    <h3>Default: flex-start</h3>
     <section class="container flex-start">
       <div class="item">1</div>
       <div class="item">Item 2</div>
       <div class="item">Outro Item</div>
     </section>
 
-    <h2>flex-end</h2>
+    <h3>flex-end</h3>
     <section class="container flex-end">
       <div class="item">1</div>
       <div class="item">Item 2</div>
       <div class="item">Outro Item</div>
     </section>
 
-    <h2>center</h2>
+    <h3>center</h3>
     <section class="container center">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -79,7 +79,7 @@
       <div class="item">5</div>
     </section>
 
-    <h2>space-between</h2>
+    <h3>space-between</h3>
     <section class="container space-between">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -88,7 +88,7 @@
       <div class="item">5</div>
     </section>
 
-    <h2>space-around</h2>
+    <h3>space-around</h3>
     <section class="container space-around">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -99,8 +99,8 @@
 
     <hr />
 
-    <h1>Column</h1>
-    <h2>flex-start (column)</h2>
+    <h2>Column</h2>
+    <h3>flex-start (column)</h3>
     <section class="container flex-start column">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -109,7 +109,7 @@
       <div class="item">5</div>
     </section>
 
-    <h2>flex-end (column)</h2>
+    <h3>flex-end (column)</h3>
     <section class="container flex-end column">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -118,7 +118,7 @@
       <div class="item">5</div>
     </section>
 
-    <h2>center (column)</h2>
+    <h3>center (column)</h3>
     <section class="container center column">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -127,7 +127,7 @@
       <div class="item">5</div>
     </section>
 
-    <h2>space-between (column)</h2>
+    <h3>space-between (column)</h3>
     <section class="container space-between column">
       <div class="item">1</div>
       <div class="item">Item 2</div>
@@ -136,7 +136,7 @@
       <div class="item">5</div>
     </section>
 
-    <h2>space-around (column)</h2>
+    <h3>space-around (column)</h3>
     <section class="container space-around column">
       <div class="item">1</div>
       <div class="item">Item 2</div>
