:construction: adding summary

--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
           <li><a href="conteudos/5-align-items.html">Align Items</a></li>
         </ul>
       </section>
+      <section>
+        <ul>
+          <h3>Fundamentos do Flexbox - Parte 2</h3>
+          <li><a href="#">Título 1</a></li>
+          <li><a href="#">Título 2</a></li>
+          <li><a href="#">Título 3</a></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <h3>Conclusão</h3>
+          <li><a href="#">Projeto Integrador: Landing Page</a></li>
+          <li><a href="#">Certificado de Conclusão</a></li>
+          <li><a href="#">Código Fonte - GitHub</a></li>
+        </ul>
+      </section>
     </article>
   </body>
 </html>
