--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Início</title>
+
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -29,7 +38,9 @@
           <li><a href="conteudos/1-flex-direction.html">Flex Direction</a></li>
           <li><a href="conteudos/2-flex-wrap.html">Flex Wrap</a></li>
           <li><a href="conteudos/3-flex-flow.html">Flex Flow</a></li>
-          <li><a href="conteudos/4-justify-content.html">Justify Content</a></li>
+          <li>
+            <a href="conteudos/4-justify-content.html">Justify Content</a>
+          </li>
           <li><a href="conteudos/5-align-items.html">Align Items</a></li>
         </ul>
       </section>
