--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Início</title>
-
+    
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -55,9 +62,18 @@
       <section>
         <ul>
           <h3>Conclusão</h3>
-          <li><a href="#">Projeto Integrador: Landing Page</a></li>
-          <li><a href="#">Certificado de Conclusão</a></li>
-          <li><a href="#">Código Fonte - GitHub</a></li>
+          <li>
+            <i class="bi bi-view-list"></i>
+            <a href="#">Projeto Integrador: Landing Page</a>
+          </li>
+          <li>
+            <i class="bi bi-card-checklist"></i>
+            <a href="#">Certificado de Conclusão</a>
+          </li>
+          <li>
+            <i class="bi bi-github"></i>
+            <a href="#">Código Fonte - GitHub</a>
+          </li>
         </ul>
       </section>
     </article>
