:zap: updating file organization

--- a/conteudos/fundamentos-flexbox-1/0-display-flex.html
+++ b/conteudos/fundamentos-flexbox-1/0-display-flex.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"> Início</a> |
-      <a href="../index.html"> &lsaquo; Anterior</a> |
+      <a href="../../index.html"> Início</a> |
+      <a href="../../index.html"> &lsaquo; Anterior</a> |
       <a href="1-flex-direction.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
