--- a/conteudos/fundamentos-flexbox-1/5-align-items.html
+++ b/conteudos/fundamentos-flexbox-1/5-align-items.html
@@ -57,7 +57,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"> Início</a> |
+      <a href="../../index.html"> Início</a> |
       <a href="4-justify-content.html"> &lsaquo; Anterior</a> |
       <a href="5-align-items.html"> Próxima &rsaquo;</a>
     </header>
