--- a/conteudos/fundamentos-flexbox-1/1-flex-direction.html
+++ b/conteudos/fundamentos-flexbox-1/1-flex-direction.html
@@ -61,7 +61,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"> Início</a> |
+      <a href="../../index.html"> Início</a> |
       <a href="0-display-flex.html"> &lsaquo; Anterior</a> |
       <a href="2-flex-wrap.html"> Próxima &rsaquo;</a>
     </header>
