--- a/conteudos/fundamentos-flexbox-1/2-flex-wrap.html
+++ b/conteudos/fundamentos-flexbox-1/2-flex-wrap.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"> Início</a> |
+      <a href="../../index.html"> Início</a> |
       <a href="1-flex-direction.html"> &lsaquo; Anterior</a> |
       <a href="3-flex-flow.html"> Próxima &rsaquo;</a>
     </header>
