--- a/conteudos/fundamentos-flexbox-1/3-flex-flow.html
+++ b/conteudos/fundamentos-flexbox-1/3-flex-flow.html
@@ -50,7 +50,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"> Início</a> |
+      <a href="../../index.html"> Início</a> |
       <a href="2-flex-wrap.html"> &lsaquo; Anterior</a> |
       <a href="4-justify-content.html"> Próxima &rsaquo;</a>
     </header>
