--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       <section>
         <ul>
           <h3>Fundamentos do Flexbox - Parte 1</h3>
-          <li><a href="conteudos/0-display-flex.html">Display Flex</a></li>
-          <li><a href="conteudos/1-flex-direction.html">Flex Direction</a></li>
-          <li><a href="conteudos/2-flex-wrap.html">Flex Wrap</a></li>
-          <li><a href="conteudos/3-flex-flow.html">Flex Flow</a></li>
+          <li><a href="/conteudos/fundamentos-flexbox-1/0-display-flex.html">Display Flex</a></li>
+          <li><a href="/conteudos/fundamentos-flexbox-1/1-flex-direction.html">Flex Direction</a></li>
+          <li><a href="/conteudos/fundamentos-flexbox-1/2-flex-wrap.html">Flex Wrap</a></li>
+          <li><a href="/conteudos/fundamentos-flexbox-1/3-flex-flow.html">Flex Flow</a></li>
           <li>
-            <a href="conteudos/4-justify-content.html">Justify Content</a>
+            <a href="/conteudos/fundamentos-flexbox-1/4-justify-content.html">Justify Content</a>
           </li>
-          <li><a href="conteudos/5-align-items.html">Align Items</a></li>
+          <li><a href="/conteudos/fundamentos-flexbox-1/5-align-items.html">Align Items</a></li>
         </ul>
       </section>
       <section>
