:hammer: refactor code and update font

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Fonts connect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Início</title>
 
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="https://avatars.githubusercontent.com/u/93569079?v=4"
+      type="image/x-icon"
+    />
 
     <!-- Bootstrap Icons -->
     <link
@@ -15,17 +26,15 @@
     />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header>
       <section>
-        <h1>Hello World</h1>
+        <h1>Início</h1>
         <p>
           Navegue entre as páginas desenvolvidas durante as aulas do curso
           <a
@@ -37,20 +46,53 @@
         </p>
       </section>
     </header>
+
+    <hr />
+
     <article>
       <section>
         <ul>
           <h3>Fundamentos do Flexbox - Parte 1</h3>
-          <li><a href="/conteudos/fundamentos-flexbox-1/0-display-flex.html">Display Flex</a></li>
-          <li><a href="/conteudos/fundamentos-flexbox-1/1-flex-direction.html">Flex Direction</a></li>
-          <li><a href="/conteudos/fundamentos-flexbox-1/2-flex-wrap.html">Flex Wrap</a></li>
-          <li><a href="/conteudos/fundamentos-flexbox-1/3-flex-flow.html">Flex Flow</a></li>
           <li>
-            <a href="/conteudos/fundamentos-flexbox-1/4-justify-content.html">Justify Content</a>
+            <a href="/conteudos/fundamentos-flexbox-1/0-display-flex.html"
+              >Display Flex</a
+            >
           </li>
-          <li><a href="/conteudos/fundamentos-flexbox-1/5-align-items.html">Align Items</a></li>
-          <li><a href="conteudos/fundamentos-flexbox-1/5-align-items.html">Align Items</a></li>
-          <li><a href="conteudos/fundamentos-flexbox-1/6-align-content.html">Align Content</a></li>
+          <li>
+            <a href="/conteudos/fundamentos-flexbox-1/1-flex-direction.html"
+              >Flex Direction</a
+            >
+          </li>
+          <li>
+            <a href="/conteudos/fundamentos-flexbox-1/2-flex-wrap.html"
+              >Flex Wrap</a
+            >
+          </li>
+          <li>
+            <a href="/conteudos/fundamentos-flexbox-1/3-flex-flow.html"
+              >Flex Flow</a
+            >
+          </li>
+          <li>
+            <a href="/conteudos/fundamentos-flexbox-1/4-justify-content.html"
+              >Justify Content</a
+            >
+          </li>
+          <li>
+            <a href="/conteudos/fundamentos-flexbox-1/5-align-items.html"
+              >Align Items</a
+            >
+          </li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-1/5-align-items.html"
+              >Align Items</a
+            >
+          </li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-1/6-align-content.html"
+              >Align Content</a
+            >
+          </li>
         </ul>
       </section>
       <section>
