:zap: update layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
       <section>
         <h1>Início</h1>
-        <p>
+        <p class="paragrafo">
           Navegue entre as páginas desenvolvidas durante as aulas do curso
           <a
             href="https://web.dio.me/play?search=Posicionando%20elementos%20com%20Flexbox%20em%20CSS&tab=cursos"
