--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <!-- Google Fonts connect -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -98,7 +98,11 @@
       <section>
         <ul>
           <h3>Fundamentos do Flexbox - Parte 2</h3>
-          <li><a href="#">Título 1</a></li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-2/7-flex-grow.html"
+              >Flex Grow</a
+            >
+          </li>
           <li><a href="#">Título 2</a></li>
           <li><a href="#">Título 3</a></li>
         </ul>
