--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               >Flex Grow</a
             >
           </li>
-          <li><a href="#">Título 2</a></li>
+          <li><a href="conteudos/fundamentos-flexbox-2/8-flex-basis.html">Flex Basis</a></li>
           <li><a href="#">Título 3</a></li>
         </ul>
       </section>
