:zap: contents header

--- a/conteudos/fundamentos-flexbox-1/0-display-flex.html
+++ b/conteudos/fundamentos-flexbox-1/0-display-flex.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fundamentos - display flex</title>
+
+    <link rel="stylesheet" href="../style.css">
+
     <style>
       .flex {
         max-width: 300px;
@@ -20,7 +23,7 @@
     </style>
   </head>
   <body>
-    <header>
+    <header class="content-header center">
       <a href="../../index.html"> Início</a> |
       <a href="../../index.html"> &lsaquo; Anterior</a> |
       <a href="1-flex-direction.html"> Próxima &rsaquo;</a>
