:construction: flex shrink

--- a/conteudos/fundamentos-flexbox-2/8-flex-basis.html
+++ b/conteudos/fundamentos-flexbox-2/8-flex-basis.html
@@ -14,7 +14,7 @@
       }
 
       .items {
-        background-color: #ff7f50;
+        background-color: #ff4500;
         color: #ffffff;
         text-align: center;
         margin: 0.3125rem;
@@ -48,9 +48,9 @@
   <body>
     <header>
       <a href="../../index.html"> Início</a> |
-      <a href="../fundamentos-flexbox-2/7-flex-grow.html"> &lsaquo; Anterior</a>
+      <a href="7-flex-grow.html"> &lsaquo; Anterior</a>
       |
-      <a href="#"> Próxima &rsaquo;</a>
+      <a href="9-flex-shrink.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
 
