--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             >
           </li>
           <li><a href="conteudos/fundamentos-flexbox-2/8-flex-basis.html">Flex Basis</a></li>
-          <li><a href="#">Título 3</a></li>
+          <li><a href="conteudos/fundamentos-flexbox-2/9-flex-shrink.html">Flex Shrink</a></li>
         </ul>
       </section>
       <section>
