--- a/conteudos/fundamentos-flexbox-2/9-flex-shrink.html
+++ b/conteudos/fundamentos-flexbox-2/9-flex-shrink.html
@@ -50,7 +50,7 @@
       <a href="../../index.html"> Início</a> |
       <a href="8-flex-basis.html"> &lsaquo; Anterior</a>
       |
-      <a href="#"> Próxima &rsaquo;</a>
+      <a href="10-flex.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
 
