--- a/index.html
+++ b/index.html
@@ -103,8 +103,21 @@
               >Flex Grow</a
             >
           </li>
-          <li><a href="conteudos/fundamentos-flexbox-2/8-flex-basis.html">Flex Basis</a></li>
-          <li><a href="conteudos/fundamentos-flexbox-2/9-flex-shrink.html">Flex Shrink</a></li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-2/8-flex-basis.html"
+              >Flex Basis</a
+            >
+          </li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-2/9-flex-shrink.html"
+              >Flex Shrink</a
+            >
+          </li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-2/10-flex.html"
+              >Flex</a
+            >
+          </li>
         </ul>
       </section>
       <section>
