--- a/index.html
+++ b/index.html
@@ -129,11 +129,15 @@
           </li>
           <li>
             <i class="bi bi-card-checklist"></i>
-            <a href="#">Certificado de Conclusão</a>
+            <a href="#" target="_blank">Certificado de Conclusão</a>
           </li>
           <li>
             <i class="bi bi-github"></i>
-            <a href="#">Código Fonte - GitHub</a>
+            <a href="https://github.com/josuelustosa/dio-posic-elementos-flexbox" target="_blank">Código Fonte no GitHub</a>
+          </li>
+          <li>
+            <i class="bi bi-filetype-pdf"></i>
+            <a href="conteudos/material-complementar/Slides - CSS Flex Box.pdf" target="_blank">Material de Apoio</a>
           </li>
         </ul>
       </section>
