--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@
             >
           </li>
           <li>
-            <a href="conteudos/fundamentos-flexbox-2/10-flex.html"
-              >Flex</a
-            >
+            <a href="conteudos/fundamentos-flexbox-2/10-flex.html">Flex</a>
+          </li>
+          <li>
+            <a href="conteudos/fundamentos-flexbox-2/11-order.html">Order</a>
+          </li>
+          <li>
+            <a href="#">Título aqui...</a>
           </li>
         </ul>
       </section>
@@ -133,11 +137,19 @@
           </li>
           <li>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/josuelustosa/dio-posic-elementos-flexbox" target="_blank">Código Fonte no GitHub</a>
+            <a
+              href="https://github.com/josuelustosa/dio-posic-elementos-flexbox"
+              target="_blank"
+              >Código Fonte no GitHub</a
+            >
           </li>
           <li>
             <i class="bi bi-filetype-pdf"></i>
-            <a href="conteudos/material-complementar/Slides - CSS Flex Box.pdf" target="_blank">Material de Apoio</a>
+            <a
+              href="conteudos/material-complementar/Slides - CSS Flex Box.pdf"
+              target="_blank"
+              >Material de Apoio</a
+            >
           </li>
         </ul>
       </section>
