:construction: align self

--- a/conteudos/fundamentos-flexbox-2/11-order.html
+++ b/conteudos/fundamentos-flexbox-2/11-order.html
@@ -47,9 +47,9 @@
   <body>
     <header>
       <a href="../../index.html"> Início</a> |
-      <a href="9-flex-shrink.html"> &lsaquo; Anterior</a>
+      <a href="10-flex.html"> &lsaquo; Anterior</a>
       |
-      <a href="#"> Próxima &rsaquo;</a>
+      <a href="12-align-self.html"> Próxima &rsaquo;</a>
     </header>
     <hr />
 
