--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             <a href="conteudos/fundamentos-flexbox-2/11-order.html">Order</a>
           </li>
           <li>
-            <a href="#">Título aqui...</a>
+            <a href="conteudos/fundamentos-flexbox-2/12-align-self.html"
+              >Align Self</a
+            >
           </li>
         </ul>
       </section>
