--- a/conteudos/fundamentos-flexbox-2/12-align-self.html
+++ b/conteudos/fundamentos-flexbox-2/12-align-self.html
@@ -58,7 +58,7 @@
   <body>
     <header>
       <a href="../../index.html"> Início</a> |
-      <a href="10-flex.html"> &lsaquo; Anterior</a>
+      <a href="11-order.html"> &lsaquo; Anterior</a>
       |
       <a href="#"> Próxima &rsaquo;</a>
     </header>
