:zap: updating links

--- a/conteudos/fundamentos-flexbox-2/12-align-self.html
+++ b/conteudos/fundamentos-flexbox-2/12-align-self.html
@@ -60,7 +60,7 @@
       <a href="../../index.html"> Início</a> |
       <a href="11-order.html"> &lsaquo; Anterior</a>
       |
-      <a href="#"> Próxima &rsaquo;</a>
+      <a href="../flex-projeto/index.html" target="_blank"> Projeto Integrador &rsaquo;</a>
     </header>
     <hr />
 
