--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
           <h3>Conclusão</h3>
           <li>
             <i class="bi bi-view-list"></i>
-            <a href="#">Projeto Integrador: Landing Page</a>
+            <a href="conteudos/flex-projeto/index.html" target="_blank"
+              >Projeto Integrador: Landing Page</a
+            >
           </li>
           <li>
             <i class="bi bi-card-checklist"></i>
